# TrussBooks

./: .gitignore
core-accounting-engine/: Cargo.toml
core-accounting-engine/src/: app.rs  db.rs  handlers.rs  main.rs  models.rs
core-accounting-engine/src/db/: account_templates.rs  accounts.rs  businesses.rs  contacts.rs  journal_entries.rs  mod.rs  reports.rs  seeding.rs
core-accounting-engine/src/models/: mod.rs  requests.rs  responses.rs
migrations/: 01_init_ledger.sql  02_business_auth_invoicing.sql  03_payroll_tax_config.sql  04_account_templates.sql
